Fixed: when dragged, piece should not be contained by a cell
Added detection of cells
Removed "click to toggle" cell feature
In the icon, change the number line to go from "0 to 1" with no tick marks in between to give a consistent view of "the whole"
Fixed: The number of pieces in the bucket should be equal to the max numerator value - number in the slices
Fixed: Adding values with the bucket should change the spinner
Hide the bucket for number line
Fixed: Pieces should be the right size or jump to right size when dragged out of bucket
Added buckets
# 0.00.32 (61123) Feb 8, 2012
Intro tab: When changing the denominator, have pieces stay as close to their original location as possible (no animation) instead of all filling from the left
Make the bars a little smaller in the representation control panel buttons
Show entire filled whole icons in the representation control panel, not objects with divisions
Intro tab: Removed reduced/mixed control panel
Fixed: Fraction goes off the screen to the left on mac
# 0.00.31 (59741) Dec 28, 2011
Removed other tabs for posting feasibility test for Tab 1
Nudged cakes slightly to the right to avoid colliding with left edge of window
# 0.00.30 (59737) Dec 28, 2011
Fixed: If cake slices are removed by clicking so there is an empty cake, the spinners fail to function
Made the cake button icon image to be in fourths to be consistent with the others
Improved empty cake piece detection
# 0.00.29 (59730) Dec 27, 2011
Fixed a bug in cake slice selection
# 0.00.28 (59727) Dec 27, 2011
Added cakes for 1-8 denominator
Removed cakes for 1/12 divisions
Started click-to-toggle cake feature
# 0.00.27 (59713) Dec 27, 2011
Put the cake after the glass of water, and the number line last in the representation control panel
Added more cake images for testing
# 0.00.26 (59710) Dec 27, 2011
Fixed: When clicking the water glasses, the clicking action works fine but does not appear to affect the fraction value.
# 0.00.25 (59702) Dec 27, 2011