@@ -1,3 +1,4 @@
+Require pieces to intersect with cells before they are dropped
 Fixed: when dragged, piece should not be contained by a cell
 Added detection of cells
 Removed "click to toggle" cell feature
